kubernetes/main/apps/kube-system/cilium/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/appName: "Hubble"
    hajimari.io/icon: lan
    hajimari.io/group: "networking"
    hajimari.io/instance: "admin"

spec:
  hostnames: ["hubble.${SECRET_DOMAIN}"]
  parentRefs:
    - name: internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: hubble-ui
          namespace: kube-system
          port: 80
